# pkg/apiclient/model_install_provider_dto.go
@@ -1,184 +1,0 @@
-/*
-Daytona Server API
-
-Daytona Server API
-
-API version: v0.0.0-dev
-*/
-
-// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
-
-package apiclient
-
-import (
-	"bytes"
-	"encoding/json"
-	"fmt"
-)
-
-// checks if the InstallProviderDTO type satisfies the MappedNullable interface at compile time
-var _ MappedNullable = &InstallProviderDTO{}
-
-// InstallProviderDTO struct for InstallProviderDTO
-type InstallProviderDTO struct {
-	Name    string `json:"name"`
-	Version string `json:"version"`
-}
-
-type _InstallProviderDTO InstallProviderDTO
-
-// NewInstallProviderDTO instantiates a new InstallProviderDTO object
-// This constructor will assign default values to properties that have it defined,
-// and makes sure properties required by API are set, but the set of arguments
-// will change when the set of required properties is changed
-func NewInstallProviderDTO(name string, version string) *InstallProviderDTO {
-	this := InstallProviderDTO{}
-	this.Name = name
-	this.Version = version
-	return &this
-}
-
-// NewInstallProviderDTOWithDefaults instantiates a new InstallProviderDTO object
-// This constructor will only assign default values to properties that have it defined,
-// but it doesn't guarantee that properties required by API are set
-func NewInstallProviderDTOWithDefaults() *InstallProviderDTO {
-	this := InstallProviderDTO{}
-	return &this
-}
-
-// GetName returns the Name field value
-func (o *InstallProviderDTO) GetName() string {
-	if o == nil {
-		var ret string
-		return ret
-	}
-
-	return o.Name
-}
-
-// GetNameOk returns a tuple with the Name field value
-// and a boolean to check if the value has been set.
-func (o *InstallProviderDTO) GetNameOk() (*string, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.Name, true
-}
-
-// SetName sets field value
-func (o *InstallProviderDTO) SetName(v string) {
-	o.Name = v
-}
-
-// GetVersion returns the Version field value
-func (o *InstallProviderDTO) GetVersion() string {
-	if o == nil {
-		var ret string
-		return ret
-	}
-
-	return o.Version
-}
-
-// GetVersionOk returns a tuple with the Version field value
-// and a boolean to check if the value has been set.
-func (o *InstallProviderDTO) GetVersionOk() (*string, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.Version, true
-}
-
-// SetVersion sets field value
-func (o *InstallProviderDTO) SetVersion(v string) {
-	o.Version = v
-}
-
-func (o InstallProviderDTO) MarshalJSON() ([]byte, error) {
-	toSerialize, err := o.ToMap()
-	if err != nil {
-		return []byte{}, err
-	}
-	return json.Marshal(toSerialize)
-}
-
-func (o InstallProviderDTO) ToMap() (map[string]interface{}, error) {
-	toSerialize := map[string]interface{}{}
-	toSerialize["name"] = o.Name
-	toSerialize["version"] = o.Version
-	return toSerialize, nil
-}
-
-func (o *InstallProviderDTO) UnmarshalJSON(data []byte) (err error) {
-	// This validates that all required properties are included in the JSON object
-	// by unmarshalling the object into a generic map with string keys and checking
-	// that every required field exists as a key in the generic map.
-	requiredProperties := []string{
-		"name",
-		"version",
-	}
-
-	allProperties := make(map[string]interface{})
-
-	err = json.Unmarshal(data, &allProperties)
-
-	if err != nil {
-		return err
-	}
-
-	for _, requiredProperty := range requiredProperties {
-		if _, exists := allProperties[requiredProperty]; !exists {
-			return fmt.Errorf("no value given for required property %v", requiredProperty)
-		}
-	}
-
-	varInstallProviderDTO := _InstallProviderDTO{}
-
-	decoder := json.NewDecoder(bytes.NewReader(data))
-	decoder.DisallowUnknownFields()
-	err = decoder.Decode(&varInstallProviderDTO)
-
-	if err != nil {
-		return err
-	}
-
-	*o = InstallProviderDTO(varInstallProviderDTO)
-
-	return err
-}
-
-type NullableInstallProviderDTO struct {
-	value *InstallProviderDTO
-	isSet bool
-}
-
-func (v NullableInstallProviderDTO) Get() *InstallProviderDTO {
-	return v.value
-}
-
-func (v *NullableInstallProviderDTO) Set(val *InstallProviderDTO) {
-	v.value = val
-	v.isSet = true
-}
-
-func (v NullableInstallProviderDTO) IsSet() bool {
-	return v.isSet
-}
-
-func (v *NullableInstallProviderDTO) Unset() {
-	v.value = nil
-	v.isSet = false
-}
-
-func NewNullableInstallProviderDTO(val *InstallProviderDTO) *NullableInstallProviderDTO {
-	return &NullableInstallProviderDTO{value: val, isSet: true}
-}
-
-func (v NullableInstallProviderDTO) MarshalJSON() ([]byte, error) {
-	return json.Marshal(v.value)
-}
-
-func (v *NullableInstallProviderDTO) UnmarshalJSON(src []byte) error {
-	v.isSet = true
-	return json.Unmarshal(src, &v.value)
-}
